--- a/Logging/Day6_Logging.ipynb
+++ b/Logging/Day6_Logging.ipynb
@@ -43,17 +43,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-UbyTBV5Jqwv",
-        "outputId": "d7e9d1f3-ce9c-43cb-ebaa-fce6462ef98c"
+        "outputId": "064baa6c-eb0f-4bec-a5b4-74b33ae4432f"
       },
-      "execution_count": 1,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:root:This is the warning log\n",
-            "ERROR:root:This is the error log\n",
-            "CRITICAL:root:This is the critical log\n"
+            "25-06-2025 13:37:15 - root - DEBUG - This is the debug log\n",
+            "25-06-2025 13:37:15 - root - INFO - This is the info log\n",
+            "25-06-2025 13:37:15 - root - WARNING - This is the warning log\n",
+            "25-06-2025 13:37:15 - root - ERROR - This is the error log\n",
+            "25-06-2025 13:37:15 - root - CRITICAL - This is the critical log\n"
           ]
         }
       ]
@@ -84,7 +86,7 @@
         "id": "bFmyNqw_LGhD",
         "outputId": "7e02a211-c625-4351-b679-d3cbbe95e9b0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +116,7 @@
         "id": "x5mQPg0aLR83",
         "outputId": "ef166cb3-d386-4dec-c218-1cf099ce1506"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +139,7 @@
         "id": "Biigz1lmLieV",
         "outputId": "4793210a-cf46-48af-fbbc-7f907c69b207"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +191,7 @@
         "id": "mC28TvSqL5Jq",
         "outputId": "19f461b0-105d-4826-ed84-fd2ee5e3a227"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +214,7 @@
         "id": "r2yH1p52MRWk",
         "outputId": "c0a94713-b6a3-4a3b-8507-a87ce09b2468"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +238,7 @@
         "id": "asCCvPWAOkts",
         "outputId": "6149d1bb-9551-4045-eb55-5439e6dabe9a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +279,7 @@
         "id": "FtU_CGvBQEhM",
         "outputId": "cff18c42-c1b3-4752-89d1-b6f57c28d393"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,7 +302,7 @@
         "id": "gW915K0sRXGR",
         "outputId": "6c888648-0393-49d3-88e5-faad4d59e95b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -397,7 +399,7 @@
         "id": "e0WVUo7AISut",
         "outputId": "282d0d82-27e2-4836-faa3-51609a4aeef8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +422,7 @@
         "id": "JOW9VLDHIra3",
         "outputId": "fda1a81f-51a8-4326-c253-bd5a624209ef"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
